--- a/OpenHomeMVC/src/main/resources/templates/guest/dashboard.html
+++ b/OpenHomeMVC/src/main/resources/templates/guest/dashboard.html
@@ -36,6 +36,10 @@
 			<th>Phone Number</th>
 			<td>[[${guest.userDetails.phoneNumber}]]</td>
 		</tr>
+		<tr>
+			<th>Display Picture</th>
+			<td><img style="width:200px" th:src="${guest.userDetails.displayPictureId == null ? 'https://vignette.wikia.nocookie.net/made-for-tv-movie/images/6/62/Image_unavailable.png/revision/latest?cb=20171002225603' : guest.userDetails.displayPictureId.url}"></td>
+		</tr>
 	</table>
 </div>
 </body>
