--- a/OpenHomeMVC/src/main/resources/templates/host/update.html
+++ b/OpenHomeMVC/src/main/resources/templates/host/update.html
@@ -13,7 +13,7 @@
 <body>
 <h1>Host Update Form</h1>
 <p style="color:red">[[${errorMessage}]]</p>
-<form action="/host/update" method="POST">
+<form action="/host/update" method="POST" enctype="multipart/form-data">
 	<table border="1">
 		<tr>
 			<th>Email</th>
@@ -42,6 +42,14 @@
 		<tr>
 			<th>Phone Number</th>
 			<td><input name="phoneNumber" th:value="${host.userDetails.phoneNumber}" required></td>
+		</tr>
+		<tr>
+			<th>Display Picture</th>
+			<td><img style="width:200px" th:src="${host.userDetails.displayPictureId == null ? 'https://vignette.wikia.nocookie.net/made-for-tv-movie/images/6/62/Image_unavailable.png/revision/latest?cb=20171002225603' : host.userDetails.displayPictureId.url}"></td>
+		</tr>
+		<tr>
+			<th>Display Picture Change</th>
+			<td><input name="displayPicture" type="file" accept="image/*"></td>
 		</tr>
 		<tr>
 			<td colspan="2"><input type="submit"></td>
