Search Results View and Previews Added

--- a/OpenHomeMVC/src/main/resources/templates/index.html
+++ b/OpenHomeMVC/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
 	<ul>
 		<li><a href="/space/register">Register</a></li>
 		<li><a href="/space/view">View All</a></li>
+		<li><a href="/space/searchresults">Search Results</a></li>
 		<li><a href="/space/update">Update</a></li>
 		<li><a href="/space/delete">Delete</a></li>
 	</ul>
@@ -30,6 +31,7 @@
 		<li><a href="/guest/logout">Logout</a></li>
 		<li><a href="/guest/delete">Delete</a></li>
 	</ul>
+	<a href="/timeDelta">Time Delta</a>
 	<script>
 		console.log(window.location);
 		if(window.location.pathname != "/"){
