--- a/OpenHomeMVC/src/main/resources/templates/space/register.html
+++ b/OpenHomeMVC/src/main/resources/templates/space/register.html
@@ -74,6 +74,16 @@
 			</td>
 		</tr>
 		<tr>
+			<th>Space Preview Picture</th>
+			<td><input name="image" type="file" accept="image/*"><input type="text" name="imageUrl" placeholder="img link"></td>
+		</tr>
+		<tr>
+			<th>Available On</th>
+			<td>
+				<div id='availableWeekDays' class='checkBoxContainer' svals='[Sunday,Monday,Tuesday,Wednesday,Thursday,Friday,Saturday]' vals='Sunday;Monday;Tuesday;Wednesday;Thursday;Friday;Saturday'></div>
+			</td>
+		</tr>
+		<tr>
 			<th>No Of Bedrooms</th>
 			<td><input name='noOfBedrooms' type='number' required></td>
 		</tr>
@@ -167,7 +177,7 @@
 $(function() {
 	$( ".checkBoxContainer" ).each(function( index ) {
 		  console.log( index + ": " + $( this ).text() );
-		  loadCheckBoxes(this,$(this).attr("vals").split(";"),$(this).attr("svals").split(";"));
+		  loadCheckBoxes(this,$(this).attr("vals").split(";"),$(this).attr("svals"));
 	});
 	
 	function loadCheckBoxes(elem,langs,selectedlangs){
