--- a/OpenHomeMVC/src/main/resources/templates/booking/create.html
+++ b/OpenHomeMVC/src/main/resources/templates/booking/create.html
@@ -2,9 +2,58 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Booking Create</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
+<h1>Booking Create</h1>
+<form th:action="@{'/booking/create?spaceId=' + ${space.id}}" method="POST">
+		<input type="date" 
+	       name="checkInDateString" id="checkIn" onchange="dateChanged()"
+	       format-value="yyyy-MM-dd">
+	    <input type="date" 
+	       name="checkOutDateString" id="checkOut" onchange="dateChanged()"
+	       format-value="yyyy-MM-dd">
+	    <p >Price for your booking is : $<input id="estimatePrice" readonly value="0.0"></p>
+	    <input type="submit">
+	</form>
+	<script>
+		var weekdayPrice = [[${space.spaceDetails.weekdayRentPrice}]] ;
+		var weekendPrice = [[${space.spaceDetails.weekendRentPrice}]] ;
+		
+		console.log(weekdayPrice);
+		console.log(weekendPrice);
+		
+		function dateChanged(){
+			//console.log(new Date($("#checkIn").val()+" 08:00").getDay());
+			console.log("date changed");
+			var amount = 0;
+			try{
+				var checkIn = new Date($("#checkIn").val()+" 08:00");
+				var checkOut = new Date($("#checkOut").val()+" 08:00");
+				console.log(checkIn.getTime() +" | " + checkOut.getTime() + " | "+
+						(checkOut.getTime() - checkIn.getTime())+ " | "+(24*60*60*1000)
+								
+				);
+				
+				if(checkOut.getTime() - checkIn.getTime() >= 24*60*60*1000){
+					while(checkIn.getTime() < checkOut.getTime()){
+						amount += checkIn.getDay() == 6 ? weekendPrice : weekdayPrice ;
+						checkIn.setTime(checkIn.getTime()+24*60*60*1000);
+						console.log(checkIn.getTime() +" | " +amount);
+						document.getElementById("estimatePrice").value = amount;
+					}
+					return;
+					
+				}
+				
+			}catch(e){
+				console.log(e);
+			}
 
+			document.getElementById("estimatePrice").value = amount;
+		}
+		
+	</script>
 </body>
 </html>
