--- a/OpenHomeMVC/src/main/resources/templates/host/register.html
+++ b/OpenHomeMVC/src/main/resources/templates/host/register.html
@@ -37,7 +37,7 @@
 		</tr>
 		<tr>
 			<th>Display Picture</th>
-			<td><input name="displayPicture" type="file" accept="image/*"></td>
+			<td><input name="image" type="file" accept="image/*"><input type="text" name="imageUrl" placeholder="img link"></td>
 		</tr>
 		<tr>
 			<td colspan="2"><input type="submit"></td>
