--- a/OpenHomeMVC/src/main/resources/templates/space/preview.html
+++ b/OpenHomeMVC/src/main/resources/templates/space/preview.html
@@ -6,17 +6,29 @@
 <style>
 	body{
 		margin:0;
+		overflow:hidden;
 	}
+	
 	#previewContainer{
 		width:420px;
-		height:400px;
-		
+		height:410px;
+		transition: all .6s ease;
+        -webkit-transition: all .6s ease;
+        color:black;
+        background-color:white;
 	}
+	
+	#previewContainer:hover{
+        color:white;
+        background-color:black;
+    }
+	
 	#imageContainer{
 		width:420px;
 		height:300px;
 		position:relative;
 	}
+	
 	#image{
 		position:absolute;
 		width:420px;
@@ -38,9 +50,11 @@
 	#infoContainer{
 		padding:10px;
 		width:400px;
-		height:90px;
+		height:100px;
 		white-space:nowrap;
 	}
+	
+	
 	
 	#name{
 		font-size: 18pt;
@@ -63,7 +77,7 @@
 	}
 </style>
 </head>
-<body>
+<body th:attr="data-id=${space.id}">
 
 	<div id="previewContainer">
 		<div id="imageContainer">
@@ -78,6 +92,7 @@
 	</div>
 
 	<script>
+		
 		function addStars(rating=4.5){
 	        stars = "";
 	        count = 0;
