--- a/OpenHomeMVC/src/main/resources/templates/space/searchresults.html
+++ b/OpenHomeMVC/src/main/resources/templates/space/searchresults.html
@@ -4,23 +4,122 @@
 <meta charset="UTF-8">
 <title>Search Results</title>
 <style>
+	#searchStubsContainer{
+		width:1330px;
+		margin:0 auto;
+	}
 	.searchStubs{
 		display:inline-block;
 		width:420px;
-		height:400px;
+		height:410px;
 		border:none;
 		box-shadow: 0 0 10px #444;
 		margin:10px;
 	}
 </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-	<h1>Space Search Results</h1>
-	<p style="color:red">[[${errorMessage}]]</p>
-	<div th:if="${spaces != null}" style="width:1330px; margin:0 auto;">
-		<span th:each="space : ${spaces}" >
-			<iframe class="searchStubs" th:src="@{'../space/view?preview=true&spaceId=' + ${space.id}}"></iframe>
-		</span>
-	</div>
+	<form action="../space/searchresults" method="POST">
+		<input name="keywords" th:value="${spaceSearchQuery.keywords}" placeholder="Keywords">
+		<input name="cityOrZip" th:value="${spaceSearchQuery.cityOrZip}" placeholder="City or Zip">
+		<input type="date" th:value="${spaceSearchQuery.bookingStartDateTime}"
+	       name="bookingStartDateTime"
+	       format-value="yyyy-MM-dd">
+	    <input type="date" th:value="${spaceSearchQuery.bookingEndDateTime}"
+	       name="bookingEndDateTime"
+	       format-value="yyyy-MM-dd">   
+	    <p>Sharing Type : 
+	    	<div id='sharingType' class='checkBoxContainer' th:attr="svals=${spaceSearchQuery.sharingType}" vals='Entire House;Shared Room;Private Room'></div>
+		</p>
+	    <p>Property Type : 
+		    <div id='propertyType' class='checkBoxContainer' th:attr="svals=${spaceSearchQuery.propertyType}" vals='House;Apartment;Bed and breakfast;Boutique hotel;Bungalow;Cabin;Cottage;Guest suite;Guesthouse;Hotel;Loft;Serviced apartment;Townhouse;Villa'></div>
+		</p>
+	    <input name="minPrice" th:value="${spaceSearchQuery.minPrice}" type="number" placeholder="Min Price">
+	    <input name="maxPrice" th:value="${spaceSearchQuery.maxPrice}" type="number" placeholder="Max Price">
+	    <label><input type="checkbox" name="internetAvailable" value="Yes" th:checked="${spaceSearchQuery.internetAvailable}">Internet</label>
+	    <input type="submit">
+	</form>
+	<div id="searchStubsContainer"></div>
+	<script type="text/javascript" th:inline="javascript" th:if="${spaces != null}">
+		var spaceDetails = [
+			/*[# th:each="space : ${spaces}"]*/
+			[ [[${space.id}]] , [[${space.bestSuitedSearchResult}]] ],
+			/*[/]*/
+			];
+		console.log(spaceDetails);
+		
+		var page = 0 ;
+		
+		function loadPage(){
+			for( var i = (page*6)+0 ; i < (page*6)+6 ; i++ ){
+				if(spaceDetails.length <= i){
+					page++;
+					return;
+				}
+				loadStub(i);
+			}
+			page++;
+			
+			$('IFRAME').on('load', function () {
+				var dataid = $(this).attr("data-id");
+			   $(this).contents().on('click', function () {
+				   window.location = "../space/view?spaceId="+dataid;
+			   })
+			});
+		}
+		
+		//var encounteredFirstNonBestSuitedSearchResult;
+		var efnbssr = false;
+		
+		function loadStub(i){
+			if(spaceDetails[i][1] == false){
+				if(efnbssr == false){
+					efnbssr = true;
+					document.getElementById("searchStubsContainer").appendChild(document.createElement("hr"));
+				}
+			}
+			var elem = document.createElement("iframe");
+			elem.setAttribute("class","searchStubs");
+			elem.setAttribute("src","../space/view?preview=true&spaceId="+spaceDetails[i][0]);
+			elem.setAttribute("data-id",spaceDetails[i][0]);
+			document.getElementById("searchStubsContainer").appendChild(elem);
+		}
+		
+		loadPage();
+		window.onscroll = function(ev) {
+		    if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+		        // you're at the bottom of the page
+		    	loadPage();
+				
+		    }
+		};
+		
+		$(function() {
+			
+			$( ".checkBoxContainer" ).each(function( index ) {
+				  console.log( index + ": " + $( this ).text() );
+				  loadCheckBoxes(this,$(this).attr("vals").split(";"),$(this).attr("svals"));
+			});
+			
+			function loadCheckBoxes(elem,langs,selectedlangs){
+			 langs.forEach(function(lang) {
+			  var label = document.createElement("label");
+			  var checklist = document.createElement("input");
+			  checklist.setAttribute("type","checkbox");
+			  checklist.setAttribute("name",$(elem).attr("id"));
+			  checklist.setAttribute("value",lang);
+			  if(selectedlangs.includes(lang))
+			  	checklist.setAttribute("checked",true);
+			  label.append(checklist);
+			  label.append(lang);
+			  $(elem).append(label);
+			 });
+			}
+			
+			
+			
+		});
+	</script>
 </body>
 </html>
