Booking Management Done.

--- a/OpenHomeMVC/src/main/resources/templates/booking/list.html
+++ b/OpenHomeMVC/src/main/resources/templates/booking/list.html
@@ -21,13 +21,13 @@
 			<td>Weekday Rent Price</td>
 		</tr>
 		<tr th:each="booking : ${bookings}">
-			<td>[[${booking.id}]]</td>
+			<td><a th:href="@{'/booking/view?bookingId=' + ${booking.id}}">[[${booking.id}]]</a></td>
 			<td>[[${booking.createdDate}]]</td>
 			<td>[[${booking.checkIn}]]</td>
 			<td>[[${booking.checkOut}]]</td>
 			<td>[[${booking.actualCheckIn}]]</td>
 			<td>[[${booking.actualCheckOut}]]</td>
-			<td>[[${booking.space.id}]]</td>
+			<td><a th:href="@{'/space/view?spaceId=' + ${booking.space.id}}">[[${booking.space.spaceDetails.name}]]</a></td>
 			<td>[[${booking.guest.userDetails.email}]]</td>
 			<td>[[${booking.bookingState}]]</td>
 			<td>[[${booking.weekdayRentPrice}]]</td>
