--- a/OpenHomeMVC/src/main/resources/templates/index.html
+++ b/OpenHomeMVC/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+<a href="/test1">Test 1</a>
 	<h2>Host</h2>
 	<ul>
 		<li><a href="/host/register">Register</a></li>
