--- a/OpenHomeMVC/src/main/resources/templates/guest/dashboard.html
+++ b/OpenHomeMVC/src/main/resources/templates/guest/dashboard.html
@@ -16,7 +16,7 @@
 		<a href="/verify/phone">Guest Verify Phone</a>
    	</div>
    	
-	<a href="/guest/booking/list">Bookings of Space</a>
+	<a href="/guest/reservation/list">Reservations of Place</a>
 	
 	<table border="1">
 		<tr>
