--- a/OpenHomeMVC/src/main/resources/templates/index.html
+++ b/OpenHomeMVC/src/main/resources/templates/index.html
@@ -15,13 +15,13 @@
 		<li><a href="/host/logout">Logout</a></li>
 		<li><a href="/host/delete">Delete</a></li>
 	</ul>
-	<h2>Space</h2>
+	<h2>Place</h2>
 	<ul>
-		<li><a href="/space/register">Register</a></li>
-		<li><a href="/space/view">View All</a></li>
-		<li><a href="/space/searchresults">Search Results</a></li>
-		<li><a href="/space/update">Update</a></li>
-		<li><a href="/space/delete">Delete</a></li>
+		<li><a href="/place/register">Register</a></li>
+		<li><a href="/place/view">View All</a></li>
+		<li><a href="/place/searchresults">Search Results</a></li>
+		<li><a href="/place/update">Update</a></li>
+		<li><a href="/place/delete">Delete</a></li>
 	</ul>
 	<h2>Guest</h2>
 	<ul>
