--- a/OpenHomeMVC/src/main/resources/templates/space/imagesUpdateDelete.html
+++ b/OpenHomeMVC/src/main/resources/templates/space/imagesUpdateDelete.html
@@ -17,9 +17,9 @@ img{
 </head>
 <body>
 
-<form th:action="@{'/space/updateSpaceImagesDelete?spaceId=' + ${space.id}}" method="POST" >
+<form th:action="@{'/place/updatePlaceImagesDelete?placeId=' + ${place.id}}" method="POST" >
 	<ul>
-		<li th:each="image : ${space.spaceDetails.images}">
+		<li th:each="image : ${place.placeDetails.images}">
 			<img th:src="${image.url}"/>
 			<input type="submit" name="deleteImageId" th:value="${image.id}">
 		</li>
