--- a/OpenHomeMVC/src/main/resources/templates/space/preview.html
+++ b/OpenHomeMVC/src/main/resources/templates/space/preview.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Space Preview</title>
+<title>Place Preview</title>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
 	body{
@@ -51,7 +51,7 @@
 		padding:10px;
 		width:400px;
 		height:100px;
-		white-space:nowrap;
+		white-place:nowrap;
 	}
 	
 	
@@ -61,7 +61,7 @@
 	    margin-bottom: 10px;
 	    width: inherit;
 	    text-overflow: ellipsis;
-	    white-space: nowrap;
+	    white-place: nowrap;
 	    overflow: hidden;
 	}
 	
@@ -72,22 +72,22 @@
 	    color: #666;
 	    width: inherit;
 	    text-overflow: ellipsis;
-	    white-space: nowrap;
+	    white-place: nowrap;
 	    overflow: hidden;
 	}
 </style>
 </head>
-<body th:attr="data-id=${space.id}">
+<body th:attr="data-id=${place.id}">
 
 	<div id="previewContainer">
 		<div id="imageContainer">
-			<img id="image" th:src="${#lists.size(space.spaceDetails.images) == 0 ? 'https://vignette.wikia.nocookie.net/made-for-tv-movie/images/6/62/Image_unavailable.png/revision/latest?cb=20171002225603' : space.spaceDetails.images[0].url}"/>
-			<p id="price">$[[${space.spaceDetails.weekdayRentPrice}]] to $[[${space.spaceDetails.weekendRentPrice}]]</p>
+			<img id="image" th:src="${#lists.size(place.placeDetails.images) == 0 ? 'https://vignette.wikia.nocookie.net/made-for-tv-movie/images/6/62/Image_unavailable.png/revision/latest?cb=20171002225603' : place.placeDetails.images[0].url}"/>
+			<p id="price">$[[${place.placeDetails.weekdayRentPrice}]] to $[[${place.placeDetails.weekendRentPrice}]]</p>
 		</div>
 		<div id="infoContainer">
-			<p id="name">[[${space.spaceDetails.name}]]</p>
-			<p class="info">[[${space.spaceDetails.propertyType}]]&#8729;[[${space.spaceDetails.roomType}]]&#8729;[[${space.spaceDetails.accomodates}]] Guests&#8729;[[${space.spaceDetails.address.addressLine1}]]</p>
-			<p class="info"><span class="info" id="stars" th:attr="stars=${space.spaceDetails.averageOverallRating}"></span>&#8729;[[${space.spaceDetails.totalReviewsCount == null ? 10 : space.spaceDetails.totalReviewsCount}]] Reviews</p>
+			<p id="name">[[${place.placeDetails.name}]]</p>
+			<p class="info">[[${place.placeDetails.propertyType}]]&#8729;[[${place.placeDetails.roomType}]]&#8729;[[${place.placeDetails.accomodates}]] Guests&#8729;[[${place.placeDetails.address.addressLine1}]]</p>
+			<p class="info"><span class="info" id="stars" th:attr="stars=${place.placeDetails.averageOverallRating}"></span>&#8729;[[${place.placeDetails.totalReviewsCount == null ? 10 : place.placeDetails.totalReviewsCount}]] Reviews</p>
 		</div>
 	</div>
 
@@ -113,7 +113,7 @@
 	
 	        return stars;
 	    }
-		document.getElementById("stars").innerHTML += addStars([[${space.spaceDetails.averageOverallRating}]]);
+		document.getElementById("stars").innerHTML += addStars([[${place.placeDetails.averageOverallRating}]]);
 	</script>
 
 </body>
