--- a/OpenHomeMVC/src/main/resources/templates/space/update.html
+++ b/OpenHomeMVC/src/main/resources/templates/space/update.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Space Update</title>
+<title>Place Update</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
 	var successLink = "[[${successLink}]]";
@@ -12,19 +12,19 @@
 </script>
 </head>
 <body>
-<h1>Space Update Form</h1>
+<h1>Place Update Form</h1>
 <p style="color:red">[[${errorMessage}]]</p>
-<div th:if="${space != null}">
-<form id="myForm" th:action="@{'/space/update?spaceId=' + ${space.id}}" method="POST">
+<div th:if="${place != null}">
+<form id="myForm" th:action="@{'/place/update?placeId=' + ${place.id}}" method="POST">
 	<table border="1">
 		<tr>
 			<th>Name</th>
-			<td><input name="name" th:value="${space.spaceDetails.name}" required></td>
+			<td><input name="name" th:value="${place.placeDetails.name}" required></td>
 		</tr>
 		<tr>
 			<th>Property Type</th>
 			<td>
-				<select name='propertyType' th:field="*{space.spaceDetails.propertyType}" required>
+				<select name='propertyType' th:field="*{place.placeDetails.propertyType}" required>
 					<option value='House'>House</option>
 					<option value='Apartment'>Apartment</option>
 					<option value='Bed and breakfast'>Bed and breakfast</option>
@@ -45,7 +45,7 @@
 		<tr>
 			<th>Room Type</th>
 			<td>
-				<select name='roomType' th:field="*{space.spaceDetails.roomType}" required>
+				<select name='roomType' th:field="*{place.placeDetails.roomType}" required>
 					<option value='Entire House'>Entire House</option>
 					<option value='Shared Room'>Shared Room</option>
 					<option value='Private Room'>Private Room</option>
@@ -54,64 +54,64 @@
 		</tr>
 		<tr>
 			<th>Accomodates</th>
-			<td><input name='accomodates' th:value="${space.spaceDetails.accomodates}" type='number' required></td>
+			<td><input name='accomodates' th:value="${place.placeDetails.accomodates}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>Amenities</th>
 			<td>
-				<div id='amenities' class='checkBoxContainer' th:attr="svals=${space.spaceDetails.amenities}" vals='Kitchen;Shampoo;Heating;Air conditioning;Washer;Dryer;Wifi;Breakfast;Indoor fireplace;Hangers;Iron;Hair dryer;Laptop friendly workspace;TV;Crib;High chair;Self check-in;Smoke detector;Carbon monoxide detector;Private bathroom;Beachfront;Waterfront'></div>
+				<div id='amenities' class='checkBoxContainer' th:attr="svals=${place.placeDetails.amenities}" vals='Kitchen;Shampoo;Heating;Air conditioning;Washer;Dryer;Wifi;Breakfast;Indoor fireplace;Hangers;Iron;Hair dryer;Laptop friendly workplace;TV;Crib;High chair;Self check-in;Smoke detector;Carbon monoxide detector;Private bathroom;Beachfront;Waterfront'></div>
 			</td>
 		</tr>
 		<tr>
 			<th>Facilities</th>
 			<td>
-				<div id='facilities' class='checkBoxContainer' th:attr="svals=${space.spaceDetails.facilities}" vals='Free parking on premises;Gym;Hot tub;Pool'></div>
+				<div id='facilities' class='checkBoxContainer' th:attr="svals=${place.placeDetails.facilities}" vals='Free parking on premises;Gym;Hot tub;Pool'></div>
 			</td>
 		</tr>
 		<tr>
 			<th>House Rules</th>
 			<td>
-				<div id='houseRules' class='checkBoxContainer' th:attr="svals=${space.spaceDetails.houseRules}" vals='Suitable for events;Pets allowed;Smoking allowed'></div>
+				<div id='houseRules' class='checkBoxContainer' th:attr="svals=${place.placeDetails.houseRules}" vals='Suitable for events;Pets allowed;Smoking allowed'></div>
 			</td>
 		</tr>
 		<tr>
 			<th>Available On</th>
 			<td>
-				<div id='availableWeekDays' class='checkBoxContainer' th:attr="svals=${space.spaceDetails.availableWeekDays}" vals='Sunday;Monday;Tuesday;Wednesday;Thursday;Friday;Saturday'></div>
+				<div id='availableWeekDays' class='checkBoxContainer' th:attr="svals=${place.placeDetails.availableWeekDays}" vals='Sunday;Monday;Tuesday;Wednesday;Thursday;Friday;Saturday'></div>
 			</td>
 		</tr>
 		<tr>
 			<th>No Of Bedrooms</th>
-			<td><input name='noOfBedrooms' th:value="${space.spaceDetails.noOfBedrooms}" type='number' required></td>
+			<td><input name='noOfBedrooms' th:value="${place.placeDetails.noOfBedrooms}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>No Of Bathrooms</th>
-			<td><input name='noOfBathrooms' th:value="${space.spaceDetails.noOfBathrooms}" type='number' required></td>
+			<td><input name='noOfBathrooms' th:value="${place.placeDetails.noOfBathrooms}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>No Of Beds</th>
-			<td><input name='noOfBeds' th:value="${space.spaceDetails.noOfBeds}" type='number' required></td>
+			<td><input name='noOfBeds' th:value="${place.placeDetails.noOfBeds}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>Weekday Rent Price</th>
-			<td><input name='weekdayRentPrice' th:value="${space.spaceDetails.weekdayRentPrice}" type='number' required></td>
+			<td><input name='weekdayRentPrice' th:value="${place.placeDetails.weekdayRentPrice}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>Weekend Rent Price</th>
-			<td><input name='weekendRentPrice' th:value="${space.spaceDetails.weekendRentPrice}" type='number' required></td>
+			<td><input name='weekendRentPrice' th:value="${place.placeDetails.weekendRentPrice}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>SqFt</th>
-			<td><input name='sqft' th:value="${space.spaceDetails.sqft}" type='number' required></td>
+			<td><input name='sqft' th:value="${place.placeDetails.sqft}" type='number' required></td>
 		</tr>
 		<tr>
 			<th>Description</th>
-			<td><textarea name='description'>[[${space.spaceDetails.description}]]</textarea></td>
+			<td><textarea name='description'>[[${place.placeDetails.description}]]</textarea></td>
 		</tr>
 		<tr>
 			<th>Free WiFi</th>
 			<td>
-				<select name='freeWiFi' th:field="*{space.spaceDetails.freeWiFi}" required>
+				<select name='freeWiFi' th:field="*{place.placeDetails.freeWiFi}" required>
 					<option value='true'>Yes</option>
 					<option value='false'>No</option>
 				</select>
@@ -120,7 +120,7 @@
 		<tr>
 			<th>Parking Available</th>
 			<td>
-				<select name='parkingAvailable' th:field="*{space.spaceDetails.parkingAvailable}" required>
+				<select name='parkingAvailable' th:field="*{place.placeDetails.parkingAvailable}" required>
 					<option value='true'>Yes</option>
 					<option value='false'>No</option>
 				</select>
@@ -128,7 +128,7 @@
 		</tr>
 		<tr>
 			<th>Daily Parking Fee</th>
-			<td><input name='dailyParkingFee' th:value="${space.spaceDetails.dailyParkingFee}" type='number' required></td>
+			<td><input name='dailyParkingFee' th:value="${place.placeDetails.dailyParkingFee}" type='number' required></td>
 		</tr>
 		<tr>
 			<td colspan="2"><input type="submit"></td>
